--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -21,13 +22,17 @@
     "@vue/cli-plugin-e2e-cypress": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.5.11",
     "@vue/cli-plugin-unit-mocha": "^4.5.11",
-    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "1.1.3",
     "babel-eslint": "^10.0.1",
     "chai": "^4.3.3",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^7.7.0",
-    "vue-template-compiler": "^2.6.12"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-loader-v16": "npm:vue-loader@16.1.2",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.7.0"
   }
 }
